# risk_adjustment_model

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manifest.in  pyproject.toml  setup.py
risk_adjustment_model/: medicare_model.py  utilities.py  v24.py  v28.py
risk_adjustment_model/reference_data/medicare/v24/2024/: category_definition.json
risk_adjustment_model/reference_data/medicare/v28/2024/: weights.csv
scripts/: QA with hccpy.ipynb  preparing_files.ipynb  synthetic_dataset.ipynb
src/: __init__.py  beneficiary.py  config.py  logger.py  medicare_model.py  risk_model.py  setup.py  v24.py  v28.py
src/reference_data/medicare/v24/2024/: category_definition.yaml  weights.csv
src/reference_data/medicare/v28/2024/: weights.csv
src/reference_data/v24/2024/: hierarchy_definition.yaml
src/reference_data/v28/2024/: category_definition.yaml  diag_to_category_map.txt  hierarchy_definition.yaml
src/risk_adjustment_model/: __init__.py  base_model.py  beneficiary.py  category.py  commercial_model.py  config.py  diagnosis_code.py  e21.py  e24.py  e24_graft.py  mapper.py  medicare_model.py  model.py  output.py  reference_files_loader.py  result.py  utilities.py  v07.py  v08.py  v24.py  v28.py
src/risk_adjustment_model/reference_data/commercial/v07/2023/: category_definition.json  diag_to_category_map.txt  group_definition.json  hierarchy_definition.json  ndc_to_category_map.txt  (+2 more)
tests/: test_commercial_model_v07.py  test_commercial_model_v08.py  test_medicare_model.py  test_medicare_model_v24.py  test_medicare_model_v28.py  tests_medicare_model.py
(+37 files in other folders)
