[tool.poetry]
name = "risk_adjustment_model"
version = "0.1.0"
authors = ["Phil Fehlinger <pjfehlinger@gmail.com>"]
description = "Python implementation of healthcare risk adjustment models"
packages = [{include = "risk_adjustment_model"}]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
