[tool.poetry]
name = "risk_adjustment_model"
version = "0.1.0"
authors = ["Phil Fehlinger <pjfehlinger@gmail.com>"]
description = "Python implementation of healthcare risk adjustment models"
readme = "README.md"
packages = [{include = "risk_adjustment_model", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]