[tool.poetry]
name = "risk_adjustment_model"
version = "0.2.1"
authors = ["Phil Fehlinger <pjfehlinger@gmail.com>"]
description = "Python implementation of healthcare risk adjustment models"
readme = "README.md"
packages = [{include = "risk_adjustment_model", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.6.2"
jupyterlab = "^4.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
